Ajout de tout le css

--- a/app/src/main/assets/www/index.html
+++ b/app/src/main/assets/www/index.html
@@ -2,6 +2,7 @@
 <html>
  <head>
   <title>Liste des Objetx</title>
+     <link rel="stylesheet" type="text/css" href="css/index.css">
  </head>
  <body>    
  	Il y a une erreur dans le programme
@@ -9,9 +10,9 @@
         <div>
             <h1>
                 Liste des Objets
-            </h1>
+            </h1><br />
             <ul id="liste-Objet"></ul>
-			<a href="#ajouter-objet">Ajouter Objet</a>
+			<a class="btn" href="#ajouter-objet">Ajouter Objet</a>
         </div>
     </script>
 	
@@ -20,7 +21,7 @@
 			<input type="text" placeholder="nom" name="nom" id="nom">
 			<input type="text" placeholder="marque" name="marque" id="marque">
 			<input type="text" placeholder="description" name="description" id="description">
-			<input type="submit" value="Valider">
+			<input class="btn" type="submit" value="Valider">
 		</form>
 	</script>
 
@@ -29,7 +30,7 @@
 			<input type="text" placeholder="nom" name="nom" id="nom">
 			<input type="text" placeholder="marque" name="marque" id="marque">
 			<input type="text" placeholder="description" name="description" id="description">
-			<input type="submit" value="Valider">
+			<input class="btn" type="submit" value="Valider">
 		</form>
 	</script>
 
